--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Your React App Description">
-    <title>Your React App Title</title>
+    <title>скрипт: {мультивселенная}</title>
   </head>
 
   <body>
